<resources>
    <string name="app_name">@string/APP_LABEL</string>
    <string name="admob_app_ads_id" translatable="false">ca-app-pub-3940256099942544~3347511713</string>
    <string name="facebook_banner_ads_id" translatable="false">IMG_16_9_APP_INSTALL#YOUR_PLACEMENT_ID</string>
    <string name="Applovin_SDK_Key">tciJkhiW-LgtirhuOAhirpvDgoBT-ThdCn_gpfAIf027BrQx37m77f01el1Pe8OlM_xvPHbvGH6hLMDrCKHxZm</string>
    <string name="ayet_app_key" translatable="false">ayet_app_key id here</string>
    <string name="ayet_adslot" translatable="false">offer_wall</string>
    <string name="share_text">Hey You Know About this App. I have earned 100$ from this app, you also want to earn money so click on link below and download it from play store and use My Refer code to get instant bonus My Refer code is </string>
    <string name="app_you_are_blocked">You Are Blocked due to Cheating in This App \n Please Contact Us</string>
    <string name="internet_connection_of_text">No Internet Connection please check your Internet Connection and Try again.</string>
    <string name="internet_connection_slow">Internet Connection Slow \n Please Check your Internet Connection</string>
    <string name="you_win">Congratulation You win</string>
    <string name="cancel_text">Cancel</string>
    <string name="account_add_to_wallet">Add</string>
    <string name="ok_text">OK</string>
    <string name="account_enter_email">Enter Email</string>
    <string name="account_password">Password</string>
    <string name="account_login">Login</string>
    <string name="account_signup">Sign Up</string>
    <string name="app_forgot_password">Forgot Password</string>
    <string name="redeem_tag_line_1">Are You Sure to want Redeem your points</string>
    <string name="signup_enter_valid_email">Enter valid Email</string>
    <string name="signup_enter_password">Enter Password</string>
    <string name="signup_enter_valid_password">Enter 6 or more Digit Password</string>
    <string name="signup_enter_name">Enter Name</string>
    <string name="signup_enter_number">Enter Number</string>
    <string name="signup_enter_refer_code">Referral Code (optional)</string>
    <string name="email_address" translatable="false">Email address</string>
    <string name="today_work_is_over">Today\'s Work is over, try Again Tomorrow</string>
    <string name="better_luck_next_time">Better Luck Next Time</string>
    <string name="app_login_successfully">Login Successfully…</string>
    <string name="app_successfully">Successfully…</string>
    <string name="account_reset_password">Reset Password</string>
    <string name="account_forgot_password_title">Enter your register email id we sent a password reset email to you</string>
    <string name="member_since" translatable="false">Member since :</string>
    <string name="your_referral_code" translatable="false">Your Referral Code</string>
    <string name="registration_success">Registration Successfully…</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="app_change_password">Change Password</string>
    <string name="exit_text">Are you sure to exit?</string>
    <string name="email_title">Subject</string>
    <string name="send_message">Message</string>
    <string name="app_refer">Refer To Earn More</string>
    <string name="app_invite">Invite</string>
    <string name="account_resend_otp">Did not get OTP? Resend</string>
    <string name="account_profile">Profile</string>
    <string name="account_update_profile">Update Profile</string>
    <string name="account_incomplete_profile">Your Profile is Incomplete please update your Profile</string>
    <string name="account_update_successfully">Update Successfully</string>
    <string name="account_login_first">Login First</string>
    <string name="account_total_available_point">Total Available Points</string>
    <string name="menu_my_wallet">My Wallet</string>
    <string name="enter_points">Enter Points</string>
    <string name="submit">Submit</string>
    <string name="today_checkin_over">You Already Collect Today Reward, try again tomorrow</string>
    <string name="redeem_successfully">Redeem Successfully</string>
    <string name="your_refer_code">Your Referral Code</string>
    <string name="tap_copy">Tap to copy</string>
    <string name="leaderboard">LeaderBoard</string>
    <string name="position">Position</string>
    <string name="user_name">User Name</string>
    <string name="leader_winner">Winner</string>
    <string name="account_enter_new_password">Enter New Password</string>
    <string name="change_password">Submit</string>
    <string name="nav_home">Home</string>
    <string name="nav_challenges">Challenges</string>
    <string name="nav_Setting">Setting</string>
    <string name="nav_video">Videos</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_spin" translatable="false">Lucky Spin</string>
    <string name="spin_and_win" translatable="false">Spin And Win Coin</string>
    <string name="scratch_win" translatable="false">Scratch Win</string>
    <string name="scratch_win_diamod" translatable="false">Scratch And Win Diamond</string>
    <string name="profile_sub" translatable="false">Click To Your profile</string>
    <string name="splash_screen_welcome" translatable="false">Welcome To The Our App</string>
    <string name="developed_by" translatable="false">Created by Burhan Store</string>
    <string name="collect_reward">Collect Reward</string>
    <string name="gold_reward">Gold Reward</string>
    <string name="king_pot">King Pot</string>
    <string name="pay_earn_gift">Pay Earn Gift</string>
    <string name="daily_checking">Daily Checking</string>
    <string name="everyday_gifts">Everyday Gifts</string>
    <string name="watch_video">Watch Video</string>
    <string name="open_reward">Open Reward</string>
    <string name="scratch_to_win">Scratch To Win</string>
    <string name="tic_tac">Tic Tac Toe</string>
    <string name="bottom_text">To get more Rewards or Coin, Spend More Time on This application</string>
    <string name="click_to_earn_more_money">Click To Earn More Money</string>
    <string name="adds_warning">Ad</string>
    <string name="go_to">Go to</string>
    <string name="survey_received">Pollfish Survey Received</string>
    <string name="getting_offers">Getting\nOffers</string>
    <string name="show_offer_wall">Show\n Offer Wall</string>
    <string name="win_coins">%1$d</string>
    <string name="adds_video_unavailable">Today video is not available.</string>
    <string name="complete_survey">Complete Survey</string>
    <string name="login_text"><u>I already have an account , login</u></string>
    <string name="Extra_Scratch">Extra Scratch</string>
    <string name="Additional_Scratch">Additional Scratch</string>
    <string name="Great_Scratch">Great Scratch</string>
    <string name="Wallet">Wallet</string>
    <string name="todo">todo</string>
    <string name="already_have_account">Already Have Account ?</string>
    <string name="log_in">Log in</string>
    <string name="create_account">Create Account</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="number">Number</string>
    <string name="referCode">Referral Code (optional)</string>
    <string name="enter_6_digit_password">Enter 6 or More Digit Password</string>
    <string name="Redeem">Redeem</string>
    <string name="enter_correct_points">Enter Correct Points</string>
    <string name="in_progress">In Progress</string>
    <string name="enter_ff_id">Enter Free Fire ID</string>
    <string name="FF_payment_1_Coin">10000</string>
    <string name="FF_payment_1_D">100 Diamond</string>
    <string name="FF_payment_2_Coin">20000</string>
    <string name="FF_payment_2_D">200 Diamond</string>
    <string name="FF_payment_3_Coin">30000</string>
    <string name="FF_payment_3_D">300 Diamond</string>
    <string name="FF_payment_4_Coin">40000</string>
    <string name="FF_payment_4_D">400 Diamond</string>
    <string name="enter_Pubg_id">Enter Pubg ID</string>
    <string name="Pubg_payment_1_Coin">10000</string>
    <string name="Pubg_payment_1_D">100 UC</string>
    <string name="Pubg_payment_2_Coin">20000</string>
    <string name="Pubg_payment_2_D">200 UC</string>
    <string name="title_contact">Send Your Questions here</string>
    <string name="enter_number_digit">Enter 11 or more Digit Number</string>
    <string name="contact_us">Contact Us</string>
    <string name="send_now">Send Now</string>
    <string name="you_can_t_change_email">You can\'t Change Email</string>
    <string name="welcome_to">Welcome to</string>
    <string name="refer_your_friends_and_n_earn_free_coin">Refer your friends and\n earn free Coin *</string>
    <string name="click_to_check_daily_coin">Click To check Daily Coin</string>
    <string name="tic_tac_toe">Tic Tac Toe</string>
    <string name="gift_card">Gift Card</string>
    <string name="chances_left">Chances Left</string>
    <string name="dot">--</string>
    <string name="available_balance">Available Balance</string>
    <string name="Total_Earn">Total Earn</string>
    <string name="date">07/17/202222</string>
    <string name="point">+100</string>
    <string name="date_formet">yyyy/MM/dd</string>
    <string name="Extra_Bonus">Extra Bonus</string>
    <string name="Extra_points">Extra Points</string>
    <string name="watch_great">Watch Great \nExtra Points</string>
    <string name="Profile">Profile</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="please_wait">Please Wait</string>
    <string name="enter_account_id">Enter Your Payment Details</string>
    <string name="Support_whatsapp">Support</string>
    <string name="vpn_check_text">Please Connect Vpn And Try Again</string>
    <string name="ref_code_copied" translatable="false">Referral code copied to clipboard</string>
    <string name="vpn_dialog_text" translatable="false">"Please Don't Use Ads Blocker or Vpn \n Thanks You for Use Our App"</string>
    <string name="Rooted_Devices_dialog_Text" translatable="false">"Our App Not Access Rooted Devices \n Thanks You for Use Our App"</string>
    <string name="redeem_detail_text">Software testing is the process of verifying a system with the purpose of identifying any errors, gaps or missing requirement versus the actual requirement. Software testing is broadly categorised into two types - functional testing and non-functional testing.</string>
    <string name="login_page_title" translatable="false">Welcome Back!</string>
    <string name="login_page_subtitle" translatable="false">Login to continue your journey!</string>
    <string name="login_forgot_password" translatable="false">Forget Password ?</string>
    <string name="login" translatable="false">Login</string>
    <string name="email_">Email</string>
    <string name="referal_reward">Points Received From Invitation</string>
    <string name="error_data_loading">When loading data error has occurred. Check your network connection.</string>
    <string name="msg_account_blocked">This account is blocked by Admin.</string>
    <string name="title_activity_welcome">Home Screen</string>
    <string name="start">GOT IT</string>
    <string name="slide_1_desc">The best way to Earn Money from Earning App!</string>
    <string name="slide_2_desc">Spin The Wheel to Earn Coins!</string>
    <string name="slide_3_desc">Invite your Friends to Earn More Coins!</string>
    <string name="admob_app_id" translatable="false">ca-app-pub-3940256099942544/3419835294</string>
    <string name="settings_account_id">account_id</string>
    <string name="redeem">Redeem</string>
    <string name="total_refer">Total Refer</string>
</resources>