<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".fragment.ProfileFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        style="@style/ActionBar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimaryDark"
        app:elevation="2dp"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:titleTextColor="@color/white" />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/colorPrimaryDark">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:gravity="center"
                    android:text="@string/Profile"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="146dp"
                    android:layout_height="146dp"
                    android:background="@drawable/round_white_semi"
                    android:padding="3dp">


                    <androidx.cardview.widget.CardView
                        android:id="@+id/UpImage"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:clickable="false"
                        android:focusable="false"
                        app:cardBackgroundColor="@color/colorPrimary"
                        app:cardCornerRadius="70dp">

                        <ImageView
                            android:id="@+id/Profile_section"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:scaleType="centerCrop" />
                    </androidx.cardview.widget.CardView>

                    <ImageButton
                        android:id="@+id/UploadImage"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/shape_circle_button_ripple_effect"
                        android:elevation="@dimen/layout_margin"
                        android:src="@drawable/ic_baseline_cloud_upload"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:tint="#E91E63" />


                    <ProgressBar
                        android:id="@+id/edit_progressbar_info"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_below="@id/UpImage"
                        android:backgroundTint="@color/colorAccent"
                        android:visibility="gone" />

                    <ProgressBar
                        android:id="@+id/image_progress_bar_edit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/UpImage"
                        android:visibility="gone"
                        tools:ignore="NotSibling" />

                </RelativeLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15sp"
                android:background="@drawable/btn_shape3"
                android:orientation="vertical"
                android:padding="15sp">


                <TextView
                    android:id="@+id/User_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="20dp"
                    android:drawablePadding="15dp"
                    android:gravity="bottom"
                    android:text="@string/app_name"
                    android:textColor="@color/green_1"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/email_address"
                    android:textColor="@color/white_60"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/email_pf_edit_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/member_since"
                    android:textColor="@color/white_60"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/member_since"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="Your Country"
                    android:textColor="@color/white_60"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/UserCountry"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textSize="14sp" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="Device Id"
                    android:textColor="@color/white_60"
                    android:textSize="14sp" />


                <TextView
                    android:id="@+id/DeviceId"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textSize="14sp" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/available_balance"
                    android:textColor="@color/white_60"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/Upoints"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textSize="14sp" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/Total_Earn"
                    android:textColor="@color/white_60"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/Total_Earn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textSize="14sp" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/redeem"
                    android:textColor="@color/white_60"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/redeemBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textSize="14sp" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/total_refer"
                    android:textColor="@color/white_60"
                    android:textSize="14sp" />


                <TextView
                    android:id="@+id/TotalRefer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textSize="14sp" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:text="@string/your_referral_code"
                    android:textColor="@color/white_60"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/your_refer_code"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawablePadding="15sp"
                    android:gravity="bottom"
                    android:textAllCaps="true"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    app:drawableEndCompat="@drawable/ic_copy" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/update_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/email_lyt"
                    android:layout_centerHorizontal="true"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="35dp"
                    android:layout_marginRight="20dp"
                    android:background="@drawable/btn_bg"
                    android:text="@string/account_update_profile"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textStyle="bold" />


                <LinearLayout
                    android:id="@+id/UserLogut"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="60dp"
                    android:background="@drawable/btn_bg"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:paddingHorizontal="15dp"
                        android:paddingVertical="15dp"
                        android:paddingTop="10dp">

                        <LinearLayout
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:layout_centerVertical="true"
                            android:layout_marginLeft="10dp"
                            android:padding="1dp">

                            <ImageView
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:src="@drawable/out"
                                app:tint="@color/white" />

                        </LinearLayout>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_marginLeft="55dp"
                            android:fontFamily="@font/bold"
                            android:text="Logout"
                            android:textColor="@color/white"
                            android:textSize="18sp" />

                        <ImageView
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:layout_alignParentRight="true"
                            android:layout_centerVertical="true"
                            android:layout_marginRight="15dp"
                            android:rotation="180"
                            android:src="@drawable/arrow_back" />

                    </RelativeLayout>
                </LinearLayout>


            </LinearLayout>


        </LinearLayout>
    </ScrollView>

</RelativeLayout>